--- a/paginas/create_table.html
+++ b/paginas/create_table.html
@@ -12,7 +12,11 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="loader"><img
+            src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/7937643/d20-clipart-md.png" alt="">
+    </div>
+
+    <div id="container">
         <main class="telasLoginLogonCreation">
             <div class="criacao">
                 <div class="logo">
@@ -56,36 +60,40 @@
             <div>&copy; Todos os Direitos Reservados 2023.</div>
         </footer>
 
-        <script>
-            //coloca a data mínima se registrar um jogo como a atual
-            const today = new Date().toISOString().split("T")[0] + 'T00:00';
-            var minDate = document.getElementById("dataJogo");
-            minDate.setAttribute('min', today);
 
-            //setar o máximo de jogadores na mesa em 8
-            var nJogadores = document.getElementById('nJogadores');
-            const maxPlayers = nJogadores.getAttribute('max');
-
-            nJogadores.addEventListener('blur', () => {
-                if (parseInt(nJogadores.value) > maxPlayers) {
-                    nJogadores.style.border = '1px solid #994444';
-                    nJogadores.style.backgroundColor = '#f3e1e1';
-                    nJogadores.style.color = '#341717';
-                }
-                else {
-                    nJogadores.style.border = '';
-                    nJogadores.style.backgroundColor = '';
-                    nJogadores.style.color = '';
-                }
-            }
-            );
-
-            function fecharJanela() {
-                window.close();
-            }
-
-        </script>
     </div>
 </body>
+
+<script>
+    //coloca a data mínima se registrar um jogo como a atual
+    const today = new Date().toISOString().split("T")[0] + 'T00:00';
+    var minDate = document.getElementById("dataJogo");
+    minDate.setAttribute('min', today);
+
+    //setar o máximo de jogadores na mesa em 8
+    var nJogadores = document.getElementById('nJogadores');
+    const maxPlayers = nJogadores.getAttribute('max');
+
+    nJogadores.addEventListener('blur', () => {
+        if (parseInt(nJogadores.value) > maxPlayers) {
+            nJogadores.style.border = '1px solid #994444';
+            nJogadores.style.backgroundColor = '#f3e1e1';
+            nJogadores.style.color = '#341717';
+        }
+        else {
+            nJogadores.style.border = '';
+            nJogadores.style.backgroundColor = '';
+            nJogadores.style.color = '';
+        }
+    }
+    );
+
+    function fecharJanela() {
+        window.close();
+    }
+
+</script>
+
+<script src="../scripts/scriptLoadingScreen.js"></script>
 
 </html>
