--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -68,7 +68,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="./relatorios.html">
                             <i class="fa-solid fa-file"></i>
                             <p>Relatórios</p>
                         </a>
