--- a/paginas/easteregg/memory.html
+++ b/paginas/easteregg/memory.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,101 +11,110 @@
 <body>
     <div class="wrapper">
         <ul class="cards">
-            <li class="card">
-                <div class="view front_view">
+            <li class="carta_memoria">
+                <div class="view view_frente">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view back_view">
+                <div class="view view_tras">
                     <img src="../../media/dice/d4.png" alt="card-img">
                 </div>
             </li>
-            <li class="card">
-                <div class="view front_view">
+            <li class="carta_memoria">
+                <div class="view view_frente">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view back_view">
+                <div class="view view_tras">
                     <img src="../../media/dice/d6.png" alt="card-img">
                 </div>
             </li>
-            <li class="card">
-                <div class="view front_view">
+            <li class="carta_memoria">
+                <div class="view view_frente">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view back_view">
+                <div class="view view_tras">
                     <img src="../../media/dice/d8.png" alt="card-img">
                 </div>
             </li>
-            <li class="card">
-                <div class="view front_view">
+            <li class="carta_memoria">
+                <div class="view view_frente">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view back_view">
+                <div class="view view_tras">
                     <img src="../../media/dice/d10.png" alt="card-img">
                 </div>
             </li>
-            <li class="card">
-                <div class="view front_view">
+            <li class="carta_memoria">
+                <div class="view view_frente">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view back_view">
+                <div class="view view_tras">
                     <img src="../../media/dice/d12.png" alt="card-img">
                 </div>
             </li>
-            <li class="card">
-                <div class="view front_view">
+            <li class="carta_memoria">
+                <div class="view view_frente">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view back_view">
+                <div class="view view_tras">
                     <img src="../../media/dice/d100.png" alt="card-img">
                 </div>
-            </li><li class="card">
-                <div class="view front_view">
+            </li><li class="carta_memoria">
+                <div class="view view_frente">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view back_view">
+                <div class="view view_tras">
                     <img src="../../media/dice/d4.png" alt="card-img">
                 </div>
             </li>
-            <li class="card">
-                <div class="view front_view">
+            <li class="carta_memoria">
+                <div class="view view_frente">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view back_view">
+                <div class="view view_tras">
                     <img src="../../media/dice/d6.png" alt="card-img">
                 </div>
             </li>
-            <li class="card">
-                <div class="view front_view">
+            <li class="carta_memoria">
+                <div class="view view_frente">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view back_view">
+                <div class="view view_tras">
                     <img src="../../media/dice/d8.png" alt="card-img">
                 </div>
             </li>
-            <li class="card">
-                <div class="view front_view">
+            <li class="carta_memoria">
+                <div class="view view_frente">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view back_view">
+                <div class="view view_tras">
                     <img src="../../media/dice/d10.png" alt="card-img">
                 </div>
             </li>
-            <li class="card">
-                <div class="view front_view">
+            <li class="carta_memoria">
+                <div class="view view_frente">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view back_view">
+                <div class="view view_tras">
                     <img src="../../media/dice/d12.png" alt="card-img">
                 </div>
             </li>
-            <li class="card">
-                <div class="view front_view">
+            <li class="carta_memoria">
+                <div class="view view_frente">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view back_view">
+                <div class="view view_tras">
                     <img src="../../media/dice/d100.png" alt="card-img">
                 </div>
             </li>
+        </ul>
+    </div>
+    <div class="container-placar">
+        <div id="cronometro">
+            <p class="numChrono">00:00:00</p>
+        </div>
+        <hr class="separador">
+        <ul id="placar">
+            
         </ul>
     </div>
 </body>
