--- a/paginas/sign-up.html
+++ b/paginas/sign-up.html
@@ -39,10 +39,10 @@
                             <input type="hidden" id="cnpj" name="cnpj">
                         </p>
                         <p class="senha">
-                            <input type="password" id="senha" name="senha" placeholder="Senha">
+                            <input type="password" class="senha" name="senha" placeholder="Senha">
                         </p>
                         <p class="con_senha">
-                            <input type="password" id="conf_senha" name="conf_senha" placeholder="Confrimar Senha">
+                            <input type="password" class="conf_senha" name="conf_senha" placeholder="Confrimar Senha">
                         </p>
                     </div>
                     <p>
